--- a/src/Components/Molecules/Pagination/Pagination.module.css
+++ b/src/Components/Molecules/Pagination/Pagination.module.css
@@ -9,20 +9,27 @@
   margin: 0 0.2rem;
 }
 
-.pageButtons,
-.nextButton,
-.backButton {
-  padding: 10px 20px;
+.navButton {
+  padding: 8px 12px;
   background-color: #457b66;
   color: #fff;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 12px;
 }
 
-.pageButtons:hover,
-.nextButton:hover,
-.backButton:hover {
+.navButton:hover {
   background-color: #99c2a0;
+}
+
+.navButton.active {
+  color: var(--colorBlack);
+}
+
+@media screen and (min-width: 1024px) {
+  .navButton {
+    padding: 10px 20px;
+    font-size: 16px;
+  }
 }
